Fix #31 schedule day picker wrapping

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ text-align: center;
 }
 .schedule-nav ol li a {
 display:block;
-padding: 0 5px;
+padding: 0 4px;
 margin: 0 2px;
 color: #fff;
 }
